--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,9 @@ test:
 production:
   <<: *default
   database: db/production.mysql2
+  host: 127.0.0.1
+  database: [MY-APP-NAME]_production
+  username: root
+  password: <%= ENV.fetch("DATABASE_PASSWORD"){ "" } %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
