--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ production:
   <<: *default
   database: db/production.mysql2
   host: 127.0.0.1
-  database: [MY-APP-NAME]_production
+  database: ZIBRO
   username: root
   password: <%= ENV.fetch("DATABASE_PASSWORD"){ "" } %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
